# stellarust

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  savedata.rs  unzipper.rs
backend/src/api/: implementation.rs  mod.rs  prod.rs  test.rs
backend/src/broadcaster/: mod.rs  prod.rs
backend/src/campaign_select/: linux.rs  mod.rs  reader.rs  retreiver.rs  selector.rs  unzipper.rs
backend/src/data_import/: import.rs  mod.rs
backend/src/dirwatcher/: handler.rs  linux.rs  mod.rs
backend/src/file_reader/: linux.rs  mod.rs  reader.rs
backend/src/model/: custodian.rs  data.rs  mod.rs  parser.rs
backend/src/parser/: ampl.rs  clausewitz.rs  data_import.rs  mod.rs  parser.rs  save_file.rs  stellaris.rs
backend/tests/: campaign_select.rs  data_import.rs  dirwatcher.rs  model.rs  retreiver.rs  selector.rs  unzipper.rs
clausewitz-parser/: Cargo.toml
clausewitz-parser/src/: lib.rs  main.rs
clausewitz-parser/src/clausewitz/: bracketed.rs  mod.rs  quoted.rs  root.rs  simd.rs  space.rs  tables.rs  unquoted.rs  value.rs
clausewitz-parser/tests/: test.rs
data-core/: Cargo.toml
data-core-mock/: Cargo.toml
data-core-mock/src/: lib.rs
data-core/src/: data_core.rs  lib.rs
data-core/tests/: test.rs
data-import/: Cargo.toml
data-import/src/: import.rs  key.rs
data-import/tests/: data_import.rs
data-model/: Cargo.toml
data-model/src/: custodian.rs  data.rs  lib.rs
data-model/tests/: custodian.rs  test.rs
directory-watcher/: Cargo.toml
directory-watcher/src/: handler.rs  lib.rs
frontend/: Cargo.toml  index.html  out.txt
frontend/src/: app.rs  fetch.rs  lib.rs  route.rs
frontend/src/pages/: campaign_select.rs  empire_select.rs  mod.rs  save_game_select.rs
model/: Cargo.toml
model/tests/: test.rs
path-test-helper/: Cargo.toml
path-test-helper/src/: lib.rs
res/test/: empires.txt
res/test_data/campaign/unitednationsofearth_-15512622/: autosave_2200.02.01.sav
res/test_data/campaign_raw/unitednationsofearth_-15512622/autosave_2200.02.01/: empire  empire_budget  gamestate copy  meta
res/test_data/campaign_raw/unitednationsofearth_-15512622/autosave_2200.03.01/: meta
res/test_data/campaign_raw/unitednationsofearth_-15512622/autosave_2200.04.01/: meta
res/test_data/campaign_raw/unitednationsofearth_-15512622/autosave_2200.05.01/: meta
res/test_data/unitednationsofearth_-15512623/: autosave_2200.05.01.sav
res/test_data/unzipper/: zipped.sav
res/testing data/unitednationsofearth_-15512622/: autosave_2200.03.01.sav  autosave_2200.04.01.sav
sqlite-test-helper/: Cargo.toml
sqlite-test-helper/src/: lib.rs
src/: save_game_dto.rs
src/dto/: budget_component.rs  campaign_dto.rs  empire_dto.rs  mod.rs  resource_class.rs  save_game_dto.rs
test-helper/: Cargo.toml
test-helper/src/: lib.rs
tests/: integration.rs
ui-test/: Cargo.toml
unzipper/: Cargo.toml
unzipper/tests/: unzipper.rs
