[package]
name = "stellarust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "frontend",
    "backend",
    "data-model",
    "clausewitz-parser"
]

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1", features=["derive"]}
strum = "0.23"
strum_macros = "0.23"

[dev-dependencies]
wasm-bindgen-test = "0.3"
fantoccini = "0.18"
tokio = { version = "1", features = [ "full" ] }
anyhow = "1"