[package]
name = "stellarust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "test-helper",
    "frontend",
    "backend",
    "data-model",
    "clausewitz-parser"
]

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
serde = {version = "1.0.136", features=["derive"]}
strum = "0.23.0"
strum_macros = "0.23.1"

[dev-dependencies] 
wasm-bindgen-test = "0.3.29"
fantoccini = "0.18.0"
tokio = { version = "1.16.1", features = [ "full" ] }
anyhow = "1.0.53"
