[package]
name = "stellarust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "frontend",
    "backend",
    "data-model",
    "data-core",
    "clausewitz-parser",
    "sqlite-test-helper",
    "path-test-helper",
    "data-core-mock",
    "ui-test"
]

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
serde = {version = "1.0.136", features=["derive"]}
strum = "0.23.0"
strum_macros = "0.23.1"
