[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellarust = {version = "0.1.0", path = "../"}
clausewitz-parser= {version = "0.1.0", path="../clausewitz-parser"}
data-model = {version = "0.1.0", path ="../data-model"}

env_logger = "0.9"
actix-web = "3"
actix-cors = "0.5"
actix-rt="2"
listenfd="0.5"
anyhow = "1"
log = "0.4"
serde = "1"
serde_json = "1"
chrono = {version = "0.4", features = ["serde"]}
zip= "0.5"
text_io="0.1"
notify="4"
futures = "0.3"
strum = "0.23"
strum_macros = "0.23"

[dev-dependencies]



