[package]
name = "data-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.10", features = [ "runtime-actix-rustls" , "sqlite", "macros", "chrono"] }
anyhow = "1.0.53"
async-trait = "0.1.52"

[dev-dependencies]
actix-rt="2.6.0"
sqlite-test-helper = {version = "0.1.0", path = "../sqlite-test-helper"}
path-test-helper = {version = "0.1.0", path = "../path-test-helper"}