[package]
name = "data-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
log = "0.4.14"
stellarust = {version  ="0.1.0", path = "../"} 
data-core = {version = "0.1.0", path ="../data-core"}

[dev-dependencies]
actix-rt="2.6.0"
sqlite-test-helper = {version = "0.1.0", path = "../sqlite-test-helper"}
data-core-mock = {version = "0.1.0", path ="../data-core-mock"}