# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stellarust = { version = "0.1.0", path = ".." }
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.3"
wasm-logger = "0.2.0"
yew = "0.19.3"
anyhow = "1.0.51"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"