# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stellarust = { version = "0.1.0", path = ".." }
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.3"
wasm-logger = "0.2.0"
yew = "0.19.3"
anyhow = "1.0.51"
gloo-utils = "0.1.1"
log = "0.4.14"
serde = "1.0.132"
serde_derive = "1.0.132"
serde_json = "1.0.73"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
