# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stellarust = { version = "0.1.0", path = ".." }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = "0.19"
yew-router = "0.16"
anyhow = "1"
gloo-utils = "0.1"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
time = {version = "0.3", features = ["serde", "macros"]}
async-trait = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"


[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
